--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ p {
   line-height: 1.5;
 }
 
+@media (max-width: 576px) {
+  .email-link {
+    font-size: 15px;
+  }
+}
+
 .navigation-links {
   display: flex;
   margin-top: 40px;
