Improving image responsiveness

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   margin-top: 100px;
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 h1,
@@ -105,4 +106,8 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+.yogurt-pic {
+  max-height: fit-content;
 }
